Added operations with money
